--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,6 @@
 defaults:
   run:
-    working-directory: ${{ env.tf_actions_working_dir }}
+    working-directory: .
 permissions:
   pull-requests: write
 
