--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "~> 1.6" 
 
       - name: Terraform fmt
         id: fmt
@@ -27,6 +30,12 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          TF_ACTION_WORKING_DIR: '.'
+          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Validate
         id: validate
@@ -36,6 +45,12 @@ jobs:
         id: plan
         run: terraform plan -no-color
         continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          TF_ACTION_WORKING_DIR: '.'
+          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_SECRET_ACCESS_KEY }}
 
     
      
