--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,15 @@ on:
     branches:
       - main
 
+env:
+ # verbosity setting for Terraform logs
+ TF_LOG: INFO
+ # Credentials for deployment to AWS
+ AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+ AWS_REGION: ${{ env.AWS_REGION }}
+ # S3 bucket for the Terraform state
+ #BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
 
 jobs:
   terraform:
@@ -21,12 +30,6 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "~> 1.6"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          TF_ACTION_WORKING_DIR: '.'
-          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_SECRET_ACCESS_KEY }} 
 
       - name: Terraform fmt
         id: fmt
