--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ env:
  # Credentials for deployment to AWS
  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
- AWS_REGION: ${{ env.AWS_REGION }}
+ AWS_REGION: "us-east-1"
  # S3 bucket for the Terraform state
  #BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
 
