--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,15 +11,15 @@ on:
     branches:
       - main
 
-env:
- # verbosity setting for Terraform logs
- TF_LOG: INFO
- # Credentials for deployment to AWS
- AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
- AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
- AWS_REGION: ${{ env.AWS_REGION }}
- # S3 bucket for the Terraform state
- #BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
+# env:
+#  # verbosity setting for Terraform logs
+#  TF_LOG: INFO
+#  # Credentials for deployment to AWS
+#  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#  AWS_REGION: ${{ env.AWS_REGION }}
+#  # S3 bucket for the Terraform state
+#  #BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
 
 jobs:
   terraform:
@@ -30,6 +30,10 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "~> 1.6"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
 
       - name: Terraform fmt
         id: fmt
