--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,11 +17,10 @@ env:
  # Credentials for deployment to AWS
  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
- AWS_REGION: ${{ secrets.AWS_REGION }}
+ AWS_REGION: ${{ vars.AWS_REGION }}
  # S3 bucket for the Terraform state
- BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
- key: ${{ vars.KEY }}
-
+ BUCKET_TF_STATE: ${{ vars.BUCKET_TF_STATE}}
+ 
 jobs:
   terraform:
     runs-on: ubuntu-latest
