--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,9 @@ env:
  AWS_REGION: ${{ vars.AWS_REGION }}
  # S3 bucket for the Terraform state
  BUCKET_TF_STATE: ${{ vars.BUCKET_TF_STATE}}
- 
+ BUCKET_TF_KEY: ${{ vars.BUCKET_TF_KEY}}
+ TF_DESTROY: ${{ vars.TF_DESTROY }}
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
@@ -31,6 +33,21 @@ jobs:
         with:
           terraform_version: "~> 1.6"
 
+      - name: Create backend file
+
+        run: |
+          cat << 'EOF' > ${{ github.workspace }}/backend.tf
+          terraform {
+            backend "s3" {
+              bucket = {{ env.BUCKET_TF_STATE}}
+              key    = {{ env.BUCKET_TF_KEY}}
+              region = "{{ env.AWS_REGION}}"
+            } 
+          }
+          EOF
+          ls ${{ github.workspace }}
+        shell: bash
+
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
@@ -38,7 +55,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+        run: terraform init -backend-config="${{ github.workspace }}/backend.tf"
 
       - name: Terraform Validate
         id: validate
