--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,7 @@ on:
 
 env:
  # verbosity setting for Terraform logs
- TF_LOG: INFO
+ TF_LOG: ${{ vars.TF_LOG}}
  # Credentials for deployment to AWS
  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -39,7 +39,7 @@ jobs:
           terraform { 
             backend "s3" { 
               bucket =  "${{ env.BUCKET_TF_STATE }}"
-              key    =  "${{ env.BUCKET_TF_KEY }}"
+              key    =  "test/${{ env.BUCKET_TF_KEY }}"
               region =  "${{ env.AWS_REGION }}" 
             } 
           } 
