--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="${{ github.workspace }}/backend.tf"
+        run: terraform init "
 
       - name: Terraform Validate
         id: validate
