--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,13 +54,12 @@ jobs:
 
       - name: Terraform fmt
         id: fmt
-        run: terraform fmt 
+        run: terraform fmt -check
         continue-on-error: false
 
       - name: Terraform Init
         id: init
-        run: terraform init "
-
+        run: terraform init 
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
