--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,15 @@ jobs:
         with:
           terraform_version: "~> 1.6"
 
+      - name: Create backend file
+        run: |
+          cat << 'EOF' > ${{ github.workspace }}/backend.tfvars
+            backend = "s3"
+            bucket =  "${{ env.BUCKET_TF_STATE }}"
+            key    =  "/test/${{ env.BUCKET_TF_KEY }}"
+            region =  "${{ env.AWS_REGION }}" 
+          EOF
+        shell: bash
 
 
       - name: Terraform fmt
@@ -42,7 +51,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="backend="s3" \ bucket=${{ env.BUCKET_TF_STATE }}\ key=${{ env.BUCKET_TF_KEY}}\ region=${{ env.AWS_REGION}}"
+        run: terraform init -backend-config="${{ github.workspace }}/backend.tfvars"
 
       - name: Terraform Validate
         id: validate
