--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,17 +33,6 @@ jobs:
         with:
           terraform_version: "~> 1.6"
 
-      - name: Create backend file
-        run: |
-          cat << 'EOF' > ${{ github.workspace }}/backend.tfvars
-            backend = "s3"
-            bucket =  "${{ env.BUCKET_TF_STATE }}"
-            key    =  "/test/${{ env.BUCKET_TF_KEY }}"
-            region =  "${{ env.AWS_REGION }}" 
-          EOF
-        shell: bash
-
-
       - name: Terraform fmt
         id: fmt
         run: terraform fmt 
@@ -51,7 +40,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="${{ github.workspace }}/backend.tfvars"
+        run: terraform init  -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"   -backend-config="key=${{ env.BUCKET_TF_STATE }}"   -backend-config="region=${{ env.AWS_REGION }}"
 
       - name: Terraform Validate
         id: validate
