--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init  -backend-config="backend=s3"  -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"   -backend-config="key=${{ env.BUCKET_TF_STATE }}"   -backend-config="region=${{ env.AWS_REGION }}"
+        run: terraform init  -backend-config="type=s3"  -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"   -backend-config="key=${{ env.BUCKET_TF_STATE }}"   -backend-config="region=${{ env.AWS_REGION }}"
 
       - name: Terraform Validate
         id: validate
