--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,9 +15,9 @@ env:
  # verbosity setting for Terraform logs
  TF_LOG: ${{ vars.TF_LOG}}
  # Credentials for deployment to AWS
- AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
- AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
- AWS_REGION: ${{ vars.AWS_REGION }}
+#  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#  AWS_REGION: ${{ vars.AWS_REGION }}
  # S3 bucket for the Terraform state
  BUCKET_TF_STATE: ${{ vars.BUCKET_TF_STATE}}
  BUCKET_TF_KEY: ${{ vars.BUCKET_TF_KEY}}
@@ -37,15 +37,21 @@ jobs:
         run: |
           cat << 'EOF' > ${{ github.workspace }}/backend.tfvars
             bucket =  "${{ env.BUCKET_TF_STATE }}"
-            key    =  "test/${{ env.BUCKET_TF_STATE }}"
+            key    =  "test/${{ env.BUCKET_TF_KEY }}.tfstate"
             region =  "${{ env.AWS_REGION }}" 
           EOF
         shell: bash
 
+      - name: Configurar Credenciais AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Terraform fmt
         id: fmt
-        run: terraform fmt 
+        run: terraform fmt -check
         continue-on-error: false
 
       - name: Terraform Init
