--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,7 @@ jobs:
         with:
           terraform_version: "~> 1.6"
 
-      - name: Create backend file
+      - name: Create backend  tfvars
         run: |
           cat << 'EOF' > ${{ github.workspace }}/backend.tfvars
             bucket =  "${{ env.BUCKET_TF_STATE }}"
@@ -65,6 +65,7 @@ jobs:
         continue-on-error: false
 
       - name: Terraform Apply
+        if: ${{ env.TF_DESTROY == 'FALSE' | env.TF_DESTROY == 'false'  }}
         run: terraform apply -auto-approve -input=false
      
 
