--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,7 +65,7 @@ jobs:
         continue-on-error: false
 
       - name: Terraform Apply
-        if: ${{ env.TF_DESTROY == 'FALSE' | env.TF_DESTROY == 'false'  }}
+        if: ${{ env.TF_DESTROY == 'FALSE' || env.TF_DESTROY == 'false'  }}
         run: terraform apply -auto-approve -input=false
      
 
