--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,6 +60,7 @@ jobs:
         run: terraform validate -no-color
 
       - name: Terraform Plan
+        if: ${{ env.TF_DESTROY == 'FALSE' || env.TF_DESTROY == 'false'  }}
         id: plan
         run: terraform plan -no-color
         continue-on-error: false
@@ -67,6 +68,12 @@ jobs:
       - name: Terraform Apply
         if: ${{ env.TF_DESTROY == 'FALSE' || env.TF_DESTROY == 'false'  }}
         run: terraform apply -auto-approve -input=false
+
+      - name: Terraform Plan
+        if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
+        id: plan
+        run: terraform plan -destroy -no-color
+        continue-on-error: false
 
       - name: Terraform Destroy
         if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
