--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Terraform Apply
         if: ${{ env.TF_DESTROY == 'FALSE' || env.TF_DESTROY == 'false'  }}
+        id: apply
         run: terraform apply -auto-approve -input=false
 
       - name: Terraform Plan -destroy
@@ -77,6 +78,7 @@ jobs:
 
       - name: Terraform Destroy
         if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
+        id: destroy
         run: terraform destroy -auto-approve -input=false
      
 
