--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ env:
  TF_DESTROY: ${{ vars.TF_DESTROY }}
 
 jobs:
-  terraform:
+  terraform-ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -59,14 +59,5 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
-      - name: Terraform Plan -destroy
-        if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
-        id: plan-destroy
-        run: terraform plan -destroy -no-color
-        continue-on-error: false
 
-      - name: Terraform Destroy
-        if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
-        id: destroy
-        run: terraform destroy -auto-approve -input=false
      
