--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,6 +70,15 @@ jobs:
         id: apply
         run: terraform apply -auto-approve -input=false
 
+      - name: Terraform Plan -destroy
+        if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
+        id: plan-destroy
+        run: terraform plan -destroy -no-color
+        continue-on-error: false
 
+      - name: Terraform Destroy
+        if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
+        id: destroy
+        run: terraform destroy -auto-approve -input=false
 
 
