--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,5 +59,15 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
+  tfsec:
+    name: tfsec
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clone repo
+        uses: actions/checkout@master
+      - name: tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
+
 
      
