--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,6 +63,7 @@ jobs:
   tflint:
     name: tflint
     runs-on: ubuntu-latest
+    needs: terraform-ci
 
     steps:
       - uses: actions/checkout@v3
@@ -91,6 +92,7 @@ jobs:
   tfsec:
     name: tfsec
     runs-on: ubuntu-latest
+    needs: [terraform-ci]
 
     steps:
       - name: Clone repo
