--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -215,7 +215,7 @@ jobs:
       - name: Post Infracost comment
         run: |
             infracost comment github --path=/tmp/infracost.json \
-                                     --repo=$GITHUB_REPOSITORY \
-                                     --github-token=${{github.token}} \
+                                     --repo=test \
+                                     --github-token=${{secrets.GIT_TOKEN}} \
                                      --pull-request=${{github.event.pull_request.number}} \
                                      --behavior=update
