--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -162,60 +162,14 @@ jobs:
           # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issues
           # use_enforcement_rules: true # optional - use enforcement rule configs from the platform
 
-  infracost:
-    name: Infracost
+  createPullRequest:
+    name: create pr
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      # Required to post comments
-      pull-requests: write
-
-    env:
-      TF_ROOT: .
-
     steps:
+      - uses: actions/checkout@v4
 
-      - name: Setup Infracost
-        uses: infracost/actions/setup@v2
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v5
         with:
-          api-key: ${{ secrets.INFRACOST_API_KEY }}
-
-      # Checkout the base branch of the pull request (e.g. main/master).
-      - name: Checkout base branch
-        uses: actions/checkout@v3
-        with:
-          ref: '${{ github.event.pull_request.base.ref }}'
-
-      # Generate Infracost JSON file as the baseline.
-      - name: Generate Infracost cost estimate baseline
-        run: |
-          infracost breakdown --path=${TF_ROOT} \
-                              --format=json \
-                              --out-file=/tmp/infracost-base.json
-
-      # Checkout the current PR branch so we can create a diff.
-      - name: Checkout PR branch
-        uses: actions/checkout@v3
-
-      # Generate an Infracost diff and save it to a JSON file.
-      - name: Generate Infracost diff
-        run: |
-          infracost diff --path=${TF_ROOT} \
-                          --format=json \
-                          --compare-to=/tmp/infracost-base.json \
-                          --out-file=/tmp/infracost.json
-
-      # Posts a comment to the PR using the 'update' behavior.
-      # This creates a single comment and updates it. The "quietest" option.
-      # The other valid behaviors are:
-      #   delete-and-new - Delete previous comments and create a new one.
-      #   hide-and-new - Minimize previous comments and create a new one.
-      #   new - Create a new cost estimate comment on every push.
-      # See https://www.infracost.io/docs/features/cli_commands/#comment-on-pull-requests for other options.
-      - name: Post Infracost comment
-        run: |
-            infracost comment github --path=/tmp/infracost.json \
-                                     --repo=test \
-                                     --github-token=${{secrets.GIT_TOKEN}} \
-                                     --pull-request=${{github.event.pull_request.number}} \
-                                     --behavior=update
+          branch: main
