--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -176,3 +176,4 @@ jobs:
           committer: rhoribe <rhoribe1908@gmail.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
+          token: ${{ secrets.GIT_TOKEN }}
