--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -172,8 +172,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: feature/test
+          branch: main
           committer: rhoribe <rhoribe1908@gmail.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-          signoff: false
           token: ${{ secrets.GIT_TOKEN }}
