--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,6 +69,7 @@ jobs:
           base: main
           labels: automated-pr, Clouds & Regions
           branch: feature/test
+          token : ${{ secrets.GIT_TOKEN}}
 
   tflint:
     name: tflint
