--- a/.github/workflows/pr-costs.yaml
+++ b/.github/workflows/pr-costs.yaml
@@ -95,3 +95,10 @@ jobs:
           --format=json \
           --out-file=/tmp/infracost-base.json
       
+      - name: Post Infracost comment
+        run: |
+          infracost comment github --path=/tmp/infracost.json \
+                                   --repo=${{ github.repository }} \
+                                   --github-token=${{secrets.GIT_TOKEN}} \
+                                   --pull-request=${{github.event.pull_request.number}} \
+                                   --behavior=update
