--- a/.github/workflows/pr-costs.yaml
+++ b/.github/workflows/pr-costs.yaml
@@ -94,7 +94,7 @@ jobs:
 
       - name: Generate Infracost cost estimate baseline
         run: |
-          infracost breakdown --path plan.json --show-skipped --format json --out-file /tmp/infracost-base.json
+          infracost breakdown --path plan.json --format json --out-file /tmp/infracost-base.json
     
       - name: Checkout PR branch
         uses: actions/checkout@v3
