--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,19 @@ jobs:
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
-        
+
+      - name: Terraform Plan 
+        if: ${{ env.TF_DESTROY == 'FALSE' || env.TF_DESTROY == 'false'  }}
+        id: plan
+        run: terraform plan  
+        continue-on-error: false
+
+      - name: Terraform Plan -destroy
+        if: ${{ env.TF_DESTROY == 'TRUE' || env.TF_DESTROY == 'true'  }}
+        id: plan-destroy
+        run: terraform plan -destroy 
+        continue-on-error: false
+
   tflint:
     name: tflint
     runs-on: ubuntu-latest
@@ -92,7 +104,7 @@ jobs:
   tfsec:
     name: tfsec
     runs-on: ubuntu-latest
-    needs: [terraform-ci]
+    needs: terraform-ci
 
     steps:
       - name: Clone repo
@@ -104,6 +116,7 @@ jobs:
   terrascan:
     name: terrascan
     runs-on: ubuntu-latest
+    needs: terraform-ci
 
     steps:
     - name: Checkout repository
@@ -132,6 +145,7 @@ jobs:
   checkov:
     name: checkov
     runs-on: ubuntu-latest
+    needs: terraform-ci
 
     steps:
       - name: Checkout repo
