--- a/.github/workflows/pr-costs.yaml
+++ b/.github/workflows/pr-costs.yaml
@@ -105,3 +105,20 @@ jobs:
                                    --github-token=${{secrets.GIT_TOKEN}} \
                                    --pull-request=${{github.event.pull_request.number}} \
                                    --behavior=update
+
+  terraform-docs:
+    name: terraform-docs
+    runs-on: ubuntu-latest
+    steps:
+      
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Render terraform docs inside the README.md and push changes back to PR branch
+        uses: terraform-docs/gh-actions@v1.0.0
+        with:
+          working-dir: ${{ github.workspace }}
+          output-file: README.md
+          output-method: inject
+          git-push: "true"
