--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -191,7 +191,6 @@ jobs:
           pr_title: "feat: PLACEHOLDER TITLE"
           # pr_template: ".github/PULL_REQUEST_TEMPLATE.md"
           # pr_reviewer: "paigen11"
-          pr_draft: true
+          pr_draft: false
 
 
-          
