--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -188,7 +188,7 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           destination_branch: "main"
-          pr_title: "feat: PLACEHOLDER TITLE"
+          pr_title: "AUTOMATIC PR: FEATURE -> MAIN"
           # pr_template: ".github/PULL_REQUEST_TEMPLATE.md"
           # pr_reviewer: "paigen11"
           pr_draft: false
