--- a/.github/workflows/pr-costs.yaml
+++ b/.github/workflows/pr-costs.yaml
@@ -11,7 +11,7 @@ on:
     branches:
       - main
   workflow_run:
-    workflows: ["CI Infrastructure"]
+    workflows: ["tflint"]
     types:
       - completed
 
