--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -100,6 +100,7 @@ jobs:
 
       - name: Run TFLint
         run: tflint -f compact
+        continue-on-error: true
 
   tfsec:
     name: tfsec
@@ -112,6 +113,7 @@ jobs:
 
       - name: tfsec
         uses: aquasecurity/tfsec-action@v1.0.0
+        continue-on-error: true
 
   terrascan:
     name: terrascan
