--- a/.github/workflows/02-terraform-aws-costs.yaml
+++ b/.github/workflows/02-terraform-aws-costs.yaml
@@ -1,18 +1,6 @@
-defaults:
-  run:
-    working-directory: .
-permissions:
-  pull-requests: write
-
 name: "Costs Infrastructure"
-
 on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
+  workflow_call:
 
 env:
  TF_LOG: ${{ vars.TF_LOG}}
