--- a/.github/workflows/01-terraform-aws-ci.yaml
+++ b/.github/workflows/01-terraform-aws-ci.yaml
@@ -2,7 +2,11 @@ name: "CI - Terraform  Infrastructure"
 
 on:
   workflow_call:
-  
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true  
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 env:
  # verbosity setting for Terraform logs
  TF_LOG: ${{ vars.TF_LOG}}
