--- a/.github/workflows/02-terraform-aws-costs.yaml
+++ b/.github/workflows/02-terraform-aws-costs.yaml
@@ -93,9 +93,9 @@ jobs:
 
       - name: Post Infracost comment
         run: |
-          infracost comment github --path=/tmp/infracost.json \
-                                   --repo=${{ github.repository }} \
-                                   --github-token=${{secrets.GIT_TOKEN}} \
-                                   --pull-request=${{github.event.pull_request.number}} \
-                                   --behavior=update \
-                                   --commit="infracost"
+          infracost comment github --path /tmp/infracost.json \
+                                   --repo ${{ github.repository }} \
+                                   --github-token ${{secrets.GIT_TOKEN}} \
+                                   --pull-request ${{github.event.pull_request.number}} \
+                                   --behavior update \
+                                   --commit "infracost"
