--- a/.github/workflows/02-terraform-aws-costs.yaml
+++ b/.github/workflows/02-terraform-aws-costs.yaml
@@ -97,5 +97,5 @@ jobs:
                                    --repo=${{ github.repository }} \
                                    --github-token=${{secrets.GIT_TOKEN}} \
                                    --pull-request=${{github.event.pull_request.number}} \
-                                   --behavior=update
+                                   --behavior=update\
                                    --commit=${{ github.sha }}
