--- a/.github/workflows/02-terraform-aws-costs.yaml
+++ b/.github/workflows/02-terraform-aws-costs.yaml
@@ -3,7 +3,12 @@ name: "Costs Infrastructure"
 
 on:
   workflow_call:
-  
+  workflow_dispatch:
+    inputs:
+      PR:
+        required: true
+        type: number
+
 env:
  TF_LOG: ${{ vars.TF_LOG}}
  AWS_REGION: ${{ vars.AWS_REGION }}
