--- a/.github/workflows/02-terraform-aws-costs.yaml
+++ b/.github/workflows/02-terraform-aws-costs.yaml
@@ -3,10 +3,7 @@ name: "Costs Infrastructure"
 
 on:
   workflow_call:
-    inputs:
-      PR:
-        required: true
-        type: number
+
 
 env:
  TF_LOG: ${{ vars.TF_LOG}}
@@ -100,5 +97,5 @@ jobs:
           infracost comment github --path=/tmp/infracost.json \
                                    --repo=${{ github.repository }} \
                                    --github-token=${{secrets.GIT_TOKEN}} \
-                                   --pull-request=${{inputs.PR}} \
+                                   --pull-request=${{github.event.pull_request.number}} \
                                    --behavior=update
